--- a/src/pages/dashboard/Dashboard.styles.scss
+++ b/src/pages/dashboard/Dashboard.styles.scss
@@ -1,6 +1,9 @@
 .Dashboard {
 	height: 100vh;
 	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
 	h2 {
 		color: #ddd;
