--- a/src/components/timer/Timer.styles.scss
+++ b/src/components/timer/Timer.styles.scss
@@ -1,5 +1,6 @@
 .Timer {
-	width: 100%;
+	max-width: 500px;
+	width: 100vw;
 	height: 85px;
 	display: flex;
 	flex-direction: row;
@@ -7,8 +8,10 @@
 	align-items: flex-start;
 	border-bottom: 1px solid #ddd;
 	margin: 0.5rem 0;
+	padding: 1rem;
 
 	&--title {
+		width: 30%;
 		color: #ddd;
 		display: flex;
 		flex-direction: column;
@@ -37,26 +40,9 @@
 		}
 	}
 }
+
 .fas {
 	color: #ddd;
 	font-size: 1.25rem;
-	padding: 0.5rem;
-}
-
-.Timer-primary {
-	width: 100%;
-	height: 30%;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	border-bottom: 1px solid #ddd;
-
-	&--title-primary {
-		color: #ddd;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: flex-start;
-	}
+	padding: 0.5rem 0;
 }
