--- a/src/components/edit/EditTimer.style.scss
+++ b/src/components/edit/EditTimer.style.scss
@@ -1,13 +1,28 @@
 .EditTimer {
-  // background-color: #aa2f11;
   color: #fff;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   animation: reveal 0.6s linear;
+
+  &--on {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    padding: 0 0.25rem;
+  }
 }
 
 .delete {
   color: #aa2f11;
+  font-size: 1.8rem;
+}
+
+.toggle {
+  color: #11aa99;
+  font-size: 1.8rem;
 }
 
 @keyframes reveal {
