--- a/src/pages/login/Login.styles.scss
+++ b/src/pages/login/Login.styles.scss
@@ -8,6 +8,7 @@
 	justify-content: flex-start;
 	align-items: center;
 	color: #fff;
+	background-color: #1A1A1A;
 
 	a {
 		text-decoration: none;
@@ -56,7 +57,7 @@
 		border-top: none;
 		border-right: none;
 		border-left: none;
-		background-color: #222;
+		background-color: #1A1A1A;
 		color: #fff;
 		transition: 0.25s linear 0.2s;
 		font-size: 1.2rem;
