--- a/src/components/edit/EditTimer.style.scss
+++ b/src/components/edit/EditTimer.style.scss
@@ -7,6 +7,7 @@
   justify-content: space-evenly;
   align-items: center;
   animation: reveal 0.6s linear;
+  padding: 2rem 0;
 
   &--on {
     font-family: Arial, Helvetica, sans-serif;
