--- a/src/pages/home/Home.styles.scss
+++ b/src/pages/home/Home.styles.scss
@@ -9,6 +9,8 @@
 	background-color: #1a1a1a;
 
 	&--Dashboard {
+		max-width: 700px;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
